--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "dotenv -e .env -- tsnd --rs --cls --respawn src/server.ts",
-    "migrate:dev": "dotenv -e .env -- npx prisma migrate dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate:dev": "dotenv -e .env.develop -- npx prisma migrate dev",
+    "test": "dotenv -e .env.test -- jest --verbose --runInBand",
+    "migrate:test": "dotenv -e .env.test -- npx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +22,15 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.24",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.24",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "prisma": "^5.10.2",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
